add_subdirectory(dji_osdk_ros)
add_subdirectory(dji_osdk_ros_3.8.1)

FILE(GLOB EXAMPLES *.cc *.c *.cpp)
find_package( OpenCV QUIET )
if (OpenCV_FOUND)
  add_definitions(-DOPEN_CV_INSTALLED)
endif ()

FOREACH(EXAMPLE ${EXAMPLES})
  GET_FILENAME_COMPONENT(MY_TARGET "${EXAMPLE}" NAME_WE)
  ADD_EXECUTABLE(${MY_TARGET} ${EXAMPLE})
  TARGET_LINK_LIBRARIES(${MY_TARGET}
                        ${PROJECT_NAME}
                        )
  INSTALL(TARGETS ${MY_TARGET}
          ARCHIVE DESTINATION ${CATKIN_PACKAGE_LIB_DESTINATION}
          LIBRARY DESTINATION ${CATKIN_PACKAGE_LIB_DESTINATION}
          RUNTIME DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION}
          )
ENDFOREACH()
